IT-AUTOFLIGHT Changelog
Copyright (c) 2020 Josh Davidson (Octal450)
I will note if new ITAF tuning or config is required. Simply check the "ITAF CONFIG.txt" file.

---------------------------------------------------------------------------------------------------------------------

V4.0.3:
[Nasal]
* Added: HDG SEL/HLD logic for aircraft like 747 that differentiate it
* Fixed: Autoland without A/P setting ignored if A/P is turned off in ALGN or FLARE modes
* Fixed: Nasal error due to incorrect initialization of some stuff

---------------------------------------------------------------------------------------------------------------------

V4.0.2:
[Control Loop]
* Fixed: Drift calculation could calculate wrong when parked causing minor issues

[Nasal]
* Added: System resets automatically after flight complete
* Fixed: TOGA can sometimes erroneously disarm LNAV
* Fixed: LNAV Capture/Arm Logic
* Fixed: HDG/TRK bug syncing did not work properly
* Fixed: G/A CLB mode ignores altitude target

---------------------------------------------------------------------------------------------------------------------

V4.0.1:
[Control Loop]
* Fixed: Throttle servo used incorrect rates

[Nasal]
* Fixed: Bad FLCH engagement
* Fixed: Delay in updating modes causing some problems
* Changed: Minimum altitude error for FLCH engagement

---------------------------------------------------------------------------------------------------------------------

V4.0.0:
[Control Loop]
* Fixed: V/S internal being slowed while AP is not active

[Nasal]
* Added: Completely new controller
* Added: Mode reversion behavior when VOR or ILS signal is lost
* Fixed: LNAV stays active when route is lost or no longer active
* Fixed: True Course toggle accidently used instead of TRK toggle
* Fixed: Internal altitude takes too long to update
* Fixed: Sometimes, ALT CAP did not engage properly
* Fixed: Erroneous vertical mode could be selected in ALT HLD mode when no new altitude was set