@@ -19,8 +19,7 @@ See wiki for details on parameters.
 			<td>0.001</td>
 		</pitch>
 		<cmd>
-			<hdg>1.6</hdg>
-			<vorloc>2.6</vorloc>
+			<roll>1.6</roll>
 			<alt-gain>-5</alt-gain>
 		</cmd>
 		<autoland> 
